# ai-library

./: .gitignore  .gitmodules  README.md  docker-compose.dev.yml  example.env
api/: .dockerignore  Dockerfile  Makefile  docker-compose.dev.yml  example.env  ollama_entrypoint.sh  pyproject.toml  pytest.ini
api/src/: main.py  worker.py
api/src/config/: settings.py
api/src/database/: mongodb.py  neo4j.py
api/src/docs/: app_overview.md  examples_requests.json  examples_responses.json  retrieval_router.md  upload_router.md
api/src/repository/: pdf_processing.py  retrieval.py
api/src/routers/v1/: retrieval.py  upload.py
api/src/schemas/: retrieval.py  upload.py
api/src/services/: pdf_processing.py  retrieval.py
api/src/utils/: ollama_client.py  pdf_reader.py
api/tests/integration/: test_mongodb.py
