[tool.poetry]
name = "api"
version = "0.1.0"
description = "AI-Library is an app that help users to structure their local e-library and communicate with it"
authors = ["Aleksei Mikhalev <mikhalev.aleksei1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
