[tool.pdm.build]
includes = []
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
[project]
authors = [
    {name = "Aleksei Mikhalev", email = "mikhalev.aleksei1@gmail.com"},
]
requires-python = "<3.13,>=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8,<1.0.0",
    "pymupdf<2.0.0,>=1.25.3",
    "pymupdf4llm<1.0.0,>=0.0.17",
    "scikit-learn<2.0.0,>=1.6.1",
    "matplotlib<4.0.0,>=3.10.0",
    "sentence-transformers<4.0.0,>=3.4.1",
    "llama-index<1.0.0,>=0.12.17",
    "llama-index-embeddings-huggingface<1.0.0,>=0.5.1",
    "llama-index-llms-ollama<1.0.0,>=0.5.2",
    "llmsherpa<1.0.0,>=0.1.4",
    "setuptools<76.0.0,>=75.8.0",
    "wheel<1.0.0,>=0.45.1",
    "umap-learn<1.0.0,>=0.5.7",
    "datamapplot<1.0.0,>=0.5.1",
    "plotly<7.0.0,>=6.0.0",
    "nbformat<6.0.0,>=5.10.4",
    "ollama<1.0.0,>=0.4.7",
    "fuzzywuzzy<1.0.0,>=0.18.0",
    "pytextrank<4.0.0,>=3.3.0",
    "pydantic-settings<3.0.0,>=2.7.1",
    "motor>=3.7.0,<4.0.0",
    "neo4j<6.0.0,>=5.28.1",
    "pytest<9.0.0,>=8.3.4",
    "celery[redis]<6.0.0,>=5.4.0",
    "redis[hiredis]<6.0.0,>=5.2.1",
    "pypdf2>=3.0.1",
]
name = "api"
version = "0.1.0"
description = "AI-Library is an app that help users to structure their local e-library and communicate with it"
readme = "README.md"
